--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "serve-favicon": "^2.4.3",
     "socket.io-client": "^2.0.4",
     "socketcluster-client": "^9.0.2",
+    "v-tooltip": "^2.0.0-rc.25",
     "vue": "^2.5.9",
     "vue-i18n": "^6.1.1",
     "vue-infinite-loading": "^2.2.3",
