--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "babel-polyfill": "^6.23.0",
     "compression": "^1.6.2",
     "cross-env": "^4.0.0",
-    "d3": "^4.12.0",
     "domi": "git+https://bitbucket.org/BojDom/tpl.git",
     "express": "^4.15.3",
     "jsonwebtoken": "^8.1.0",
@@ -34,13 +33,12 @@
     "radial-progress-chart": "0.0.4",
     "remove": "^0.1.5",
     "rx-lite": "^4.0.8",
-    "rxjs": "^5.5.5",
     "serve-favicon": "^2.4.3",
     "socket.io-client": "^2.0.4",
     "socketcluster-client": "^9.0.2",
-    "v-tooltip": "^2.0.0-rc.25",
     "vue": "^2.5.9",
-    "vue-i18n": "^6.1.1",
+    "vue-i18n": "^7.3.3",
+    "vue-i18n-extensions": "^0.1.0",
     "vue-infinite-loading": "^2.2.3",
     "vue-meta": "^1.4.0",
     "vue-router": "^2.5.0",
