--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "compression": "^1.6.2",
     "cross-env": "^4.0.0",
     "domi": "https://bitbucket.org/BojDom/tpl.git",
+    "eventemitter2": "^5.0.1",
     "express": "^4.15.3",
     "jsonwebtoken": "^8.1.0",
     "lodash.debounce": "^4.0.8",
@@ -33,9 +34,11 @@
     "radial-progress-chart": "0.0.4",
     "remove": "^0.1.5",
     "rx-lite": "^4.0.8",
+    "rxjs": "^5.5.6",
     "serve-favicon": "^2.4.3",
     "socket.io-client": "^2.0.4",
     "socketcluster-client": "^9.0.2",
+    "uglify-es": "github:mishoo/UglifyJS2#harmony",
     "vue": "^2.5.9",
     "vue-i18n": "^7.3.3",
     "vue-i18n-extensions": "^0.1.0",
@@ -49,5 +52,8 @@
     "vue2-animate": "^1.0.4",
     "vuex": "~2.3.1",
     "vuex-router-sync": "^4.1.2"
+  },
+  "devDependencies": {
+    "uglifyjs-webpack-plugin": "^1.2.2"
   }
 }
