--- a/package.json
+++ b/package.json
@@ -17,16 +17,20 @@
     "axios": "^0.16.1",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.23.0",
+    "clientjs": "^0.1.11",
     "compression": "^1.6.2",
     "cross-env": "^4.0.0",
     "domi": "https://bitbucket.org/BojDom/tpl.git",
     "express": "^4.15.3",
+    "fingerprintjs2": "^1.6.1",
     "jsonwebtoken": "^8.1.0",
     "lodash.debounce": "^4.0.8",
     "lodash.get": "^4.4.2",
+    "lodash.orderby": "^4.6.0",
     "lodash.set": "^4.3.2",
     "lodash.throttle": "^4.1.1",
     "lru-cache": "^4.1.1",
+    "moment": "^2.22.1",
     "nouislider": "^10.1.0",
     "progressbar.js": "^1.0.1",
     "promise.prototype.finally": "^2.0.1",
