--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "vue-meta": "^1.4.0",
     "vue-router": "^2.5.0",
     "vue-server-renderer": "^2.5.9",
+    "vue-social-sharing": "^2.3.3",
     "vue-socket.io": "https://github.com/BojDom/Vue-Socket.io",
     "vue-template-compiler": "^2.5.9",
     "vue-template-loader": "^0.3.1",
