--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "axios": "^0.16.1",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.23.0",
+    "chalk": "^2.4.1",
     "clientjs": "^0.1.11",
     "compression": "^1.6.2",
     "cross-env": "^4.0.0",
     "domi": "https://bitbucket.org/BojDom/tpl.git",
     "express": "^4.15.3",
     "fingerprintjs2": "^1.6.1",
+    "greenlock": "^2.2.20",
     "jsonwebtoken": "^8.1.0",
     "lodash.debounce": "^4.0.8",
     "lodash.get": "^4.4.2",
@@ -31,6 +33,7 @@
     "lodash.throttle": "^4.1.1",
     "lru-cache": "^4.1.1",
     "moment": "^2.22.1",
+    "nginx-conf": "^1.4.0",
     "nouislider": "^10.1.0",
     "progressbar.js": "^1.0.1",
     "promise.prototype.finally": "^2.0.1",
