--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "compression": "^1.6.2",
     "cross-env": "^4.0.0",
     "domi": "https://bitbucket.org/BojDom/tpl.git",
+    "dotenv": "^6.0.0",
     "express": "^4.15.3",
     "fingerprintjs2": "^1.6.1",
     "greenlock": "^2.2.20",
