--- a/package.json
+++ b/package.json
@@ -13,41 +13,40 @@
     "npm": ">=4.0"
   },
   "dependencies": {
-    "axios": "latest",
-    "@tweenjs/tween.js": "^17.1.1",
-    "chalk": "^2.4.1",
+    "@intlify/vue-i18n-extensions": "^1.0.0",
+    "axios": "0.18",
     "babel-polyfill": "^6.23.0",
-    "rxjs": "latest",
+    "chalk": "^2.4.1",
     "compression": "^1.6.2",
-    "babel-preset-es2015": "latest",
-    "babel-preset-stage-2": "latest",
-    "cross-env": "^4.0.0",
-    "myutils": "https://bitbucket.org/BojDom/myutils.git",
+    "es6tween-plugin-attr": "latest",
+    "es6tween-plugin-draw": "latest",
+    "es6tween-plugin-render": "latest",
     "dotenv": "^6.0.0",
+    "es6-tween": "latest",
     "express": "^4.15.3",
     "jsonwebtoken": "^8.1.0",
     "lodash": "latest",
     "lru-cache": "^4.1.1",
-    "moment": "^2.22.1",
+    "myutils": "https://bitbucket.org/BojDom/myutils.git",
+    "nouislider": "^10.1.0",
+    "pm2": "latest",
+    "progressbar.js": "^1.0.1",
+    "promise.prototype.finally": "^2.0.1",
     "remove": "^0.1.5",
+    "rxjs": "latest",
     "serve-favicon": "^2.4.3",
     "socketcluster-client": "14",
-    "vue-social-sharing": "^2.3.3",
     "vue": "2",
-    "vue-template-compiler": "2",
-    "pm2": "latest",
-    "vue-meta": "2",
-    "vue-infinite-loading": "^2.2.3",
-    "vuex": "~2.3.1",
     "vue-i18n": "^7.3.3",
-    "vue-i18n-extensions": "^0.1.0",
+    "vue-infinite-loading": "^2.2.3",
+    "vue-meta": "2",
     "vue-router": "^2.5.0",
+    "vue-server-renderer": "2",
+    "vue-social-sharing": "^2.3.3",
+    "vue-template-compiler": "2",
     "vue2-animate": "^1.0.4",
-    "progressbar.js": "^1.0.1",
-    "vuex-router-sync": "^4.1.2",
-    "promise.prototype.finally": "^2.0.1",
-    "nouislider": "^10.1.0",
-    "vue-server-renderer": "2"
+    "vuex": "~2.3.1",
+    "vuex-router-sync": "^4.1.2"
   },
   "devDependencies": {
     "domi": "https://bitbucket.org/BojDom/tpl.git"
